set02/problem02_compile_errors.txt
Compilation started at 11/5/2023, 12:17:32 PM
c:\Users\dvpsp\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-DvpsPranavi\set02\problem02.c: In function 'main':
c:\Users\dvpsp\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-DvpsPranavi\set02\problem02.c:10:16: warning: passing argument 1 of 'input_side' makes integer from pointer without a cast [-Wint-conversion]
     input_side(&a, &b, &c);
                ^
c:\Users\dvpsp\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-DvpsPranavi\set02\problem02.c:3:5: note: expected 'int' but argument is of type 'int *'
 int input_side(int a, int b, int c);
     ^~~~~~~~~~
c:\Users\dvpsp\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-DvpsPranavi\set02\problem02.c:10:20: warning: passing argument 2 of 'input_side' makes integer from pointer without a cast [-Wint-conversion]
     input_side(&a, &b, &c);
                    ^
c:\Users\dvpsp\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-DvpsPranavi\set02\problem02.c:3:5: note: expected 'int' but argument is of type 'int *'
 int input_side(int a, int b, int c);
     ^~~~~~~~~~
c:\Users\dvpsp\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-DvpsPranavi\set02\problem02.c:10:24: warning: passing argument 3 of 'input_side' makes integer from pointer without a cast [-Wint-conversion]
     input_side(&a, &b, &c);
                        ^
c:\Users\dvpsp\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-DvpsPranavi\set02\problem02.c:3:5: note: expected 'int' but argument is of type 'int *'
 int input_side(int a, int b, int c);
     ^~~~~~~~~~
c:\Users\dvpsp\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-DvpsPranavi\set02\problem02.c: In function 'input_side':
c:\Users\dvpsp\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-DvpsPranavi\set02\problem02.c:43:1: error: expected declaration or statement at end of input
 }
 ^
Compilation finished at 11/5/2023, 12:17:32 PM
Compilation started at 11/6/2023, 9:21:44 AM
c:\Users\dvpsp\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-DvpsPranavi\set02\problem02.c: In function 'main':
c:\Users\dvpsp\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-DvpsPranavi\set02\problem02.c:10:16: warning: passing argument 1 of 'input_side' makes integer from pointer without a cast [-Wint-conversion]
     input_side(&a, &b, &c);
                ^
c:\Users\dvpsp\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-DvpsPranavi\set02\problem02.c:3:5: note: expected 'int' but argument is of type 'int *'
 int input_side(int a, int b, int c);
     ^~~~~~~~~~
c:\Users\dvpsp\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-DvpsPranavi\set02\problem02.c:10:20: warning: passing argument 2 of 'input_side' makes integer from pointer without a cast [-Wint-conversion]
     input_side(&a, &b, &c);
                    ^
c:\Users\dvpsp\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-DvpsPranavi\set02\problem02.c:3:5: note: expected 'int' but argument is of type 'int *'
 int input_side(int a, int b, int c);
     ^~~~~~~~~~
c:\Users\dvpsp\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-DvpsPranavi\set02\problem02.c:10:24: warning: passing argument 3 of 'input_side' makes integer from pointer without a cast [-Wint-conversion]
     input_side(&a, &b, &c);
                        ^
c:\Users\dvpsp\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-DvpsPranavi\set02\problem02.c:3:5: note: expected 'int' but argument is of type 'int *'
 int input_side(int a, int b, int c);
     ^~~~~~~~~~
Compilation finished at 11/6/2023, 9:21:45 AM
Compilation started at 11/6/2023, 9:21:59 AM
c:\Users\dvpsp\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-DvpsPranavi\set02\problem02.c: In function 'main':
c:\Users\dvpsp\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-DvpsPranavi\set02\problem02.c:10:16: warning: passing argument 1 of 'input_side' makes integer from pointer without a cast [-Wint-conversion]
     input_side(&a, &b, &c);
                ^
c:\Users\dvpsp\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-DvpsPranavi\set02\problem02.c:3:5: note: expected 'int' but argument is of type 'int *'
 int input_side(int a, int b, int c);
     ^~~~~~~~~~
c:\Users\dvpsp\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-DvpsPranavi\set02\problem02.c:10:20: warning: passing argument 2 of 'input_side' makes integer from pointer without a cast [-Wint-conversion]
     input_side(&a, &b, &c);
                    ^
c:\Users\dvpsp\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-DvpsPranavi\set02\problem02.c:3:5: note: expected 'int' but argument is of type 'int *'
 int input_side(int a, int b, int c);
     ^~~~~~~~~~
c:\Users\dvpsp\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-DvpsPranavi\set02\problem02.c:10:24: warning: passing argument 3 of 'input_side' makes integer from pointer without a cast [-Wint-conversion]
     input_side(&a, &b, &c);
                        ^
c:\Users\dvpsp\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-DvpsPranavi\set02\problem02.c:3:5: note: expected 'int' but argument is of type 'int *'
 int input_side(int a, int b, int c);
     ^~~~~~~~~~
Compilation finished at 11/6/2023, 9:21:59 AM
